# market_zoomcamp

./: .gitignore  README.md  pyproject.toml
1_intro/: 1_data_sources.ipynb  hw1.ipynb
2_data/: 2_data_explore.ipynb  hw2.ipynb
3_model/: hw_3.ipynb
4_simulation/: 4_Trading_Simulations.ipynb  hw1.ipynb  hw2.ipynb  hw3.ipynb
5_simulation_advanced/: Advanced_Strategies_And_Simulation.ipynb
