[tool.poetry]
name = "market-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Iuliia Fokina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
yfinance = "^0.2.61"
pandas-datareader = "^0.10.0"
plotly = "^6.1.2"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
